Commented out the Warning message (#2235)

--- a/views/editor/bramble.html
+++ b/views/editor/bramble.html
@@ -162,6 +162,8 @@
 
     <div id="spinner-container">
 
+        <!-- Commenting out in case we need it again
+
         <div class="important-notice">
           <h2>We are having some problems right now.</h2>
           <p>
@@ -170,6 +172,8 @@
           </p>
           <p>If possible, give the editor extra time to load, or try again in a few minutes.</p>
         </div>
+        -->
+
         <div class="thimble-spinner"></div>
         <div class="loading-message message">
             <h2>{{ gettext("loadingProject") }}</h2>
